# organizador_de_tareas_local

./: .gitignore  .mcp.json  .rsyncignore  ARQUITECTURA.md  BUILD_SUCCESS.txt  BUILD_SUMMARY.md  BUILD_WINDOWS.md  CHANGELOG-SESION.md  CLAUDE.md  ESTADO-FUNCIONALIDADES.md  GUIA-DESARROLLO.md  INSTALACION.md  INSTALADO.md  LOGS-CAPTURADOS.md  README.md  SESION-COMPILACION-INSTALACION.md  SESION-EDITAR-PROYECTOS.md  SESION-ENLACES-MULTIPLES.md  SESION_RESUMEN.md  TROUBLESHOOTING.md  eslint.config.js  index.html  install.sh  monitor-logs.sh  package-lock.json  package.json  pnpm-lock.yaml  start-app.sh  tailwind.config.js  tsconfig.json  uninstall.sh  vitest.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: defaults.rs  manager.rs  mod.rs  schema.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  project.rs
src-tauri/src/platform/: linux.rs  mod.rs
src/components/: Analytics.tsx  AttachmentManager.tsx  EnhancedGitInfo.tsx  GitCommitModal.tsx  GitInfo.tsx  MarkdownEditor.tsx  ProjectContext.test.tsx  ProjectContext.tsx  ProjectForm.test.tsx  ProjectForm.tsx  ProjectFormTabs.tsx  ProjectJournal.tsx  ProjectLinks.tsx  ProjectList.test.tsx  ProjectList.tsx  SearchBar.test.tsx  SearchBar.tsx  Settings.tsx  ThemeToggle.tsx  TodoList.test.tsx  WelcomeScreen.tsx
src/contexts/: ShortcutsContext.tsx  ThemeContext.tsx
src/services/: api.test.ts  api.ts
win10/: DISTRIBUCION.md  EJECUTABLE_PORTABLE.md  MANIFEST.txt  QUICK_START.md  README.md
(+31 files in other folders)
